adding timing feature to happynewyear.html

--- a/happynewyear.v02.html
+++ b/happynewyear.v02.html
@@ -32,6 +32,7 @@ if (count > 0)
 } 
 else
 {
+    console.log("Please enter a valid positive number.")
     alert("Please enter a valid positive number.");
 }
 </script>
